<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_hint">Add a new item</string>
    <string name="add_button_label">Add</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="edit_item_label">Edit Item Below:</string>
    <string name="save_button_label">Save</string>
    <string name="mark_done_desc">Mark Done</string>
    <string name="sort_list_desc">Sort item list</string>
    <string name="details_hint">Add details here...</string>
    <string name="email_list_desc">Send todo list using email</string>
    <string name="status_prompt">Choose a status</string>
 
    <string-array name="country_arrays">
        <item>Not started</item>
        <item>In progress</item>
        <item>Done</item>
    </string-array>
 
</resources>
