<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 

    tools:context="com.forCodePath.todoapp.TodoActivity$PlaceholderFragment" >
        
    <ListView
        android:id="@+id/lvItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAdd"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ibtnSort" >

    </ListView>

    <EditText
        android:id="@+id/etNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/add_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAddedItem"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_button_label" />

    <ImageButton
        android:id="@+id/ibtnSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSortItems"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/sort_list_desc"
        android:src="@android:drawable/stat_notify_sync" />

    <ImageButton
        android:id="@+id/ibtnEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEmailItems"
        android:layout_alignBottom="@+id/ibtnSort"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/ibtnSort"
        android:contentDescription="@string/email_list_desc"
        android:src="@android:drawable/sym_action_email" />

</RelativeLayout>
